--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.9",
     "expo": "~52.0.17",
@@ -17,9 +18,11 @@
     "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
